--- a/src/templates/layout/_footer.pug
+++ b/src/templates/layout/_footer.pug
@@ -9,26 +9,30 @@ footer.main-footer
                 .heading-separator
                     .heading-separator__line.heading-separator__line-reduced-2.heading-separator__line-bolded-3.accent
                 ul.main-footer__list
-                    li 1
-                    li 2
-                    li 3
+                    li
+                        a(href="#" class="main-footer__link") 123
+                    li
+                        a(href="#" class="main-footer__link") 123
+                    li
+                        a(href="#" class="main-footer__link") 123
             .col-4
                 h3.main-footer__heading= data.mainFooter.recentChanges.h3
                 .heading-separator
                     .heading-separator__line.heading-separator__line-reduced-2.heading-separator__line-bolded-3.accent
                 ul.main-footer__list
-                    li 1
-                    li 2
-                    li 3
-            .col-4
+                    li
+                        a(href="#" class="main-footer__link") 123
+                    li
+                        a(href="#" class="main-footer__link") 123
+                    li
+                        a(href="#" class="main-footer__link") 123
+            .col-4.main-footer__findme
                 h3.main-footer__heading= data.mainFooter.findMe.h3
                 .heading-separator
                     .heading-separator__line.heading-separator__line-reduced-2.heading-separator__line-bolded-3.accent
-                ul.main-footer__list
-                    li
-                        a(href="#" class="no-link main-footer__link") 1
-                    li 2
-                    li 3
+                .main-footer__findme-body
+                    a.btn.btn-square.to-top
+                    a.btn.btn-square.to-top
             .col-12
                 p.main-footer__copyright
                     small &#169; #{data.mainFooter.copyright}
