--- a/src/css/main.css
+++ b/src/css/main.css
@@ -178,6 +178,12 @@
   font-weight: 900;
   src: url("../fonts/Source_Sans_Pro/SourceSansPro-BlackItalic.ttf") format("truetype"); }
 
+@font-face {
+  font-family: "Fontello";
+  font-style: normal;
+  font-weight: normal;
+  src: url("../fonts/Fontello/Fontello.ttf") format("truetype"); }
+
 .primary-heading {
   font-size: 4.75em;
   font-weight: 900; }
@@ -1596,6 +1602,7 @@ html {
   background-color: rgba(255, 255, 255, 0.1);
   position: relative;
   display: inline-block;
+  z-index: 1;
   overflow: hidden;
   font-size: 1em;
   font-weight: 700;
@@ -1605,42 +1612,58 @@ html {
   color: #fff;
   padding: 16.5px 20px;
   border: 1px solid #fff;
-  transition: 0.15s color linear; }
+  transition: 0.15s color ease-in-out; }
+  .btn-square, .btn-round {
+    width: 54px;
+    height: 54px;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-align-items: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-justify-content: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    padding: 0; }
   .btn-round {
-    padding: 16.5px;
     border-radius: 50%; }
-  .btn.to-left::after {
-    width: 0;
-    height: 100%;
-    left: auto;
-    right: 0; }
+  .btn::after, .btn.to-left::after {
+    left: 100%;
+    top: 0; }
+  .btn:hover::after, .btn.to-left:hover::after {
+    -webkit-transform: translate3d(-100%, 0, 1px);
+            transform: translate3d(-100%, 0, 1px); }
   .btn.to-right::after {
-    width: 0;
-    height: 100%; }
+    left: -100%; }
+  .btn.to-right:hover::after {
+    -webkit-transform: translate3d(100%, 0, 1px);
+            transform: translate3d(100%, 0, 1px); }
   .btn.to-top::after {
-    width: 100%;
-    height: 0;
-    top: auto;
-    bottom: 0; }
+    top: 100%; }
+  .btn.to-top:hover::after {
+    -webkit-transform: translate3d(0, -100%, 1px);
+            transform: translate3d(0, -100%, 1px); }
   .btn.to-bottom::after {
-    width: 100%;
-    height: 0; }
-  .btn.to-top:hover::after, .btn.to-bottom:hover::after {
-    height: 100%; }
+    top: -100%; }
+  .btn.to-bottom:hover::after {
+    -webkit-transform: translate3d(0, 100%, 1px);
+            transform: translate3d(0, 100%, 1px); }
+  .btn.to-top::after, .btn.to-bottom::after {
+    left: 0; }
   .btn::after {
     content: "";
-    width: 0;
+    width: 100%;
     height: 100%;
     position: absolute;
     display: block;
     z-index: -1;
-    left: 0;
-    top: 0;
-    transition: 0.2s width ease-in-out, 0.2s height ease-in-out, 0.3s background-color ease-in-out; }
+    transition: 0.3s background-color ease-in-out, 0.2s -webkit-transform ease-in-out;
+    transition: 0.2s transform ease-in-out, 0.3s background-color ease-in-out;
+    transition: 0.2s transform ease-in-out, 0.3s background-color ease-in-out, 0.2s -webkit-transform ease-in-out; }
   .btn:hover {
     color: #000; }
     .btn:hover::after {
-      width: 100%;
       background-color: #fff; }
   .btn-primary {
     background-color: rgba(244, 67, 54, 0.1);
@@ -1664,34 +1687,82 @@ html {
       background-color: #1565c0; }
   .btn-primary:hover, .btn-primary-dark:hover, .btn-primary-light:hover, .btn-accent:hover {
     color: #fff; }
-  .btn-arrow-down {
-    width: 48px;
-    height: 48px;
-    background-image: url(../images/icons/arrow_down_white.png);
-    background-position: -1px 1px;
-    transition: 0.15s background-image linear; }
-    .btn-arrow-down:hover {
-      background-image: url(../images/icons/arrow_down_black.png); }
 
-.icon {
+.icon::before {
   display: inline-block;
-  width: 36px;
-  height: 36px; }
-  .icon-person {
-    background-image: url(../images/sprite.png);
-    background-position: -92px 0px; }
-  .icon-build {
-    background-image: url(../images/sprite.png);
-    background-position: -46px 0px; }
-  .icon-code {
-    background-image: url(../images/sprite.png);
-    background-position: -46px -46px; }
-  .icon-call {
-    background-image: url(../images/sprite.png);
-    background-position: 0px -46px; }
-  .icon-arrow-up {
-    background-image: url(../images/sprite.png);
-    background-position: 0px 0px; }
+  font-family: "Fontello";
+  font-size: 16px;
+  font-style: normal;
+  font-variant: normal;
+  font-weight: normal;
+  text-decoration: inherit;
+  text-transform: none;
+  speak: none;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale; }
+
+.icon-125::before {
+  font-size: 20px; }
+
+.icon-cancel:before {
+  content: '\e800'; }
+
+.icon-wrench:before {
+  content: '\e801'; }
+
+.icon-phone:before {
+  content: '\e802'; }
+
+.icon-user:before {
+  content: '\e803'; }
+
+.icon-star:before {
+  content: '\e804'; }
+
+.icon-down-open-1:before {
+  content: '\e805'; }
+
+.icon-up-open-1:before {
+  content: '\e806'; }
+
+.icon-left-open:before {
+  content: '\e807'; }
+
+.icon-right-open:before {
+  content: '\e808'; }
+
+.icon-briefcase:before {
+  content: '\e809'; }
+
+.icon-twitter:before {
+  content: '\f099'; }
+
+.icon-facebook:before {
+  content: '\f09a'; }
+
+.icon-gplus:before {
+  content: '\f0d5'; }
+
+.icon-linkedin:before {
+  content: '\f0e1'; }
+
+.icon-lightbulb:before {
+  content: '\f0eb'; }
+
+.icon-desktop:before {
+  content: '\f108'; }
+
+.icon-laptop:before {
+  content: '\f109'; }
+
+.icon-github:before {
+  content: '\f113'; }
+
+.icon-code:before {
+  content: '\f121'; }
+
+.icon-codeopen:before {
+  content: '\f1cb'; }
 
 a.link {
   transition: 0.25s color ease-in-out; }
@@ -1784,10 +1855,15 @@ a.link, a.no-link {
     border: 10px solid #fff;
     box-shadow: 2.5px 2.5px 10px 0 rgba(0, 0, 0, 0.1);
     margin-top: -38px; }
-    .section-decoration-icon {
+    .section-decoration-icon::before {
+      line-height: 1;
       background-color: #f44336;
-      -webkit-transform: perspective(99px) translate3d(9px, 9px, 1px) rotate(-45deg);
-              transform: perspective(99px) translate3d(9px, 9px, 1px) rotate(-45deg);
+      display: block;
+      -webkit-transform: perspective(99px) translate3d(0px, 11px, 1px) rotate(-45deg);
+              transform: perspective(99px) translate3d(0px, 11px, 1px) rotate(-45deg);
+      font-size: 32px;
+      text-align: center;
+      color: #fff;
       box-shadow: 0 0 0 25px #f44336; }
   .section-header {
     padding: 115px 0 65px; }
@@ -1823,7 +1899,7 @@ a.link, a.no-link {
   height: calc(100vh + 64px); }
 
 .home-header {
-  padding: 175px 0 65px;
+  padding: 175px 0 59px;
   margin-bottom: 25px; }
   .home-header-buttons {
     text-align: center;
@@ -1916,9 +1992,34 @@ body {
     .main-footer__list > li {
       overflow-wrap: break-word; }
   .main-footer__link {
+    text-decoration: none;
+    color: inherit;
     transition: 0.3s color ease-in-out; }
     .main-footer__link:hover {
       color: #bdbdbd; }
+  .main-footer__findme {
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-flex-direction: column;
+        -ms-flex-direction: column;
+            flex-direction: column; }
+    .main-footer__findme-body {
+      -webkit-flex: 1;
+          -ms-flex: 1;
+              flex: 1;
+      display: -webkit-flex;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-align-items: center;
+          -ms-flex-align: center;
+              align-items: center;
+      -webkit-justify-content: center;
+          -ms-flex-pack: center;
+              justify-content: center;
+      padding-bottom: 25px; }
+      .main-footer__findme-body > .btn:nth-child(n+2) {
+        margin-left: 15px; }
   .main-footer__copyright {
     position: relative;
     padding-top: 28px; }
