--- a/src/sass/components/_section.scss
+++ b/src/sass/components/_section.scss
@@ -10,6 +10,7 @@ $section-decoration__border: 10px solid $color__white !default;
 $section-decoration__box-shadow: 2.5px 2.5px 10px 0 rgba($color__black-1, 0.1) !default;
 // .section-decoration-icon
 $section-decoration-icon__background-color: $primary-color !default;
+$section-decoration-icon__color: $color__white !default;
 $section-decoration-icon__box-shadow: 0 0 0 25px $primary-color !default;
 // .section-header-description
 $section-header-description__font-size: 1.05em !default;
@@ -30,9 +31,16 @@ $section-header-description__font-size: 1.05em !default;
         box-shadow: $section-decoration__box-shadow;
         margin-top: -38px;
         &-icon {
-            background-color: $section-decoration-icon__background-color;
-            transform: perspective(99px) translate3d(9px, 9px, 1px) rotate(-45deg);
-            box-shadow: $section-decoration-icon__box-shadow;
+            &::before {
+                line-height: 1;
+                background-color: $section-decoration-icon__background-color;
+                display: block;
+                transform: perspective(99px) translate3d(0px, 11px, 1px) rotate(-45deg);
+                font-size: 32px;
+                text-align: center;
+                color: $section-decoration-icon__color;
+                box-shadow: $section-decoration-icon__box-shadow;
+            }
         }
     }
     &-header {
