--- a/src/sass/helpers/_colors.scss
+++ b/src/sass/helpers/_colors.scss
@@ -13,8 +13,12 @@ $color__navy-blue:   #0074d9; // Used for links
 
 
 // Brands Colors
+$color__codepen:     #ff6b6b;
 $color__facebook:    #3b5998;
-$color__google:      #dd4b39;
+$color__github:      #614381;
+$color__gplus:      #dd4b39;
+$color__linkedin:    #0077b5;
+$color__twitter:     #00aced;
 
 
 // Colors of mateusz-archicinski.pl page
