--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -6,18 +6,14 @@
 // .main-footer
 $main-footer__background-color: $color__nero !default;
 $main-footer__box-shadow: 0 0 8px 0 rgba($color__black-1, 0.8) !default;
-// .main-footer__heading
-$main-footer__heading__font-family: $font__raleway !default;
-$main-footer__heading__font-size: 1.05em !default;
-$main-footer__heading__font-weight: $font-weight__bolder-8 !default;
 // .main-footer__copyright::after
 // sass-lint:disable no-color-literals
 $main-footer__copyright__after__background-image: radial-gradient(ellipse at center, rgba($color__white, 0.1) 0, rgba($color__black-1, 0) 100%) !default;
 // sass-lint:enable no-color-literals
 // .main-footer__link:hover
 $main-footer__link__hover__color: $tertiary-text-color !default;
-// .main-footer__heading .main-footer__list .main-footer__copyright
-$main-footer__heading-list-copyright__color: $color__white !default;
+// .main-footer__list .main-footer__copyright
+$main-footer__list-copyright__color: $color__white !default;
 
 
 .main-footer {
@@ -25,11 +21,6 @@ $main-footer__heading-list-copyright__color: $color__white !default;
     position: relative;
     padding: 35px 0 30px;
     box-shadow: $main-footer__box-shadow;
-    &__heading {
-        font-family: $main-footer__heading__font-family;
-        font-size: $main-footer__heading__font-size;
-        font-weight: $main-footer__heading__font-weight;
-    }
     &__list {
         list-style: none;
         padding: 0 0 25px 65px;
@@ -49,22 +40,27 @@ $main-footer__heading-list-copyright__color: $color__white !default;
         display: flex;
         flex-direction: column;
         &-body {
-            flex: 1;
             display: flex;
+            flex: 1;
+            flex-wrap: wrap;
+            align-content: center;
             align-items: center;
             justify-content: center;
             padding-bottom: 25px;
-            & > .btn:nth-child(n+2) {
-                margin-left: 15px;
+            & > .btn {
+                width: 48px;
+                height: 48px;
+                margin: 5px;
             }
         }
         
     }
     &__copyright {
         position: relative;
+        text-align: center;
         padding-top: 28px;
         &::after {
-            content: '';
+            content: "";
             width: 40%;
             height: 3px;
             background-image: $main-footer__copyright__after__background-image;
@@ -74,14 +70,9 @@ $main-footer__heading-list-copyright__color: $color__white !default;
             top: 0;
         }
     }
-    &__heading,
     &__list,
     &__copyright {
-        color: $main-footer__heading-list-copyright__color;
-    }
-    &__heading,
-    &__copyright {
-        text-align: center;
+        color: $main-footer__list-copyright__color;
         margin: 0;
     }
 }
